# cardBoardEngine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: line.frag
assets/textures/: README.txt
docs/: WINDOWS_RELEASE_ZIP.md  WINDOWS_VISUAL_STUDIO.md
framework/: logmanager.cpp  matrix4.cpp  matrix4.h  shader.h  sprite.cpp  texturemanager.h
lib/: README.md
lib/glew-2.1.0/include/: eglew.h
src/: CardBoardApp.cpp  CardBoardApp.h  Collision2D.cpp  Collision2D.h  main.cpp
src/Map/: BasicMapLayout.h  Map.cpp  Map.h
src/Player/: Player.cpp  Player.h  PlayerConfig.h
windowsBuild/: README.md
windowsBuild/cardBoardEngine/: .gitignore  AnimatedSprite.cpp  AnimatedSprite.h  BasicMapLayout_1.h  CMakeLists.txt  CardBoardApp.cpp  Collision2D.cpp  Collision2D_1.cpp  Collision2D_1.h  Game.cpp  Game.h  InputSystem.cpp  InputSystem.h  Item.cpp  Item.h  Map.cpp  Map_1.cpp  Map_1.h  Player.cpp  Player.h  PlayerConfig.h  PlayerConfig_1.h  Player_1.cpp  Player_1.h  Project1.vcxproj  Project1.vcxproj.filters  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneCardBoard.cpp  SceneCardBoard.h  Shader.cpp  Shader.h  SoundSystem.cpp  SoundSystem.h  Sprite.h  TGP.slnx  Texture.cpp  (+8 more)
windowsBuild/cardBoardEngine/assets/shaders/: line.frag  line.vert  sprite.frag  sprite.vert  vision_mask.frag  vision_mask.vert
windowsBuild/cardBoardEngine/assets/textures/: README.txt
windowsBuild/cardBoardEngine/framework/: renderer.cpp  shader.cpp  sprite.h  texture.cpp  texturemanager.cpp  vertexarray.cpp  vertexarray.h
windowsBuild/cardBoardEngine/game/shaders/: line.vert  sprite.frag  vision_mask.frag  vision_mask.vert
windowsBuild/cardBoardEngine/lib/: README.md
windowsBuild/cardBoardEngine/src/: CardBoardApp.cpp  CardBoardApp.h  Collision2D.h  main.cpp
windowsBuild/cardBoardEngine/src/Map/: BasicMapLayout.h  Map.h
windowsBuild/cardBoardEngine/src/Player/: Player.cpp
